[gd_scene load_steps=34 format=2]

[ext_resource path="res://Assets/Menus/PlayMenu/ArchaeologistButton.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menus/PlayMenu/PainterButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menus/PlayMenu/DudeButton.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menus/PlayMenu/TutorialButton.png" type="Texture" id=4]
[ext_resource path="res://Assets/Menus/PlayMenu/MusicianButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Menus/PlayMenu/WitchButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menus/PlayMenu/PilotButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menus/PlayMenu/BackButton.png" type="Texture" id=8]
[ext_resource path="res://src/Environment/Menus/PlayMenu/PlayMenu.gd" type="Script" id=9]
[ext_resource path="res://src/Environment/Menus/PlayMenu/TutorialButton.gd" type="Script" id=10]
[ext_resource path="res://src/Environment/Menus/PlayMenu/ArchaeologistButton.gd" type="Script" id=11]
[ext_resource path="res://src/Environment/Menus/PlayMenu/DudeButton.gd" type="Script" id=12]
[ext_resource path="res://src/Environment/Menus/PlayMenu/MusicianButton.gd" type="Script" id=13]
[ext_resource path="res://src/Environment/Menus/PlayMenu/PainterButton.gd" type="Script" id=14]
[ext_resource path="res://src/Environment/Menus/PlayMenu/PilotButton.gd" type="Script" id=15]
[ext_resource path="res://src/Environment/Menus/PlayMenu/WitchButton.gd" type="Script" id=16]
[ext_resource path="res://src/Environment/Menus/PlayMenu/BackButton.gd" type="Script" id=17]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/selected = null

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/selected = null

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/selected = null

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/selected = null

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/selected = null

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )
shader_param/selected = null

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/selected = null

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform bool selected;

void fragment(){
	vec4 color = texture(TEXTURE, UV);

	if(selected){
		COLOR = vec4(0.31, 0.59, 0.86, color.a)
	}else{
		COLOR = color;
	}
}
"

[sub_resource type="ShaderMaterial" id=16]
shader = SubResource( 15 )
shader_param/selected = null

[node name="PlayMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 750.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1280.0
margin_bottom = 750.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 412.0
margin_top = 113.0
margin_right = 868.0
margin_bottom = 637.0
custom_constants/separation = 200

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TutorialButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
material = SubResource( 2 )
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 4 )
script = ExtResource( 10 )

[node name="ArchaeologistButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
material = SubResource( 4 )
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
script = ExtResource( 11 )

[node name="DudeButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
material = SubResource( 6 )
margin_top = 264.0
margin_right = 128.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
script = ExtResource( 12 )

[node name="MusicianButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer"]
material = SubResource( 8 )
margin_top = 396.0
margin_right = 128.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 5 )
script = ExtResource( 13 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 328.0
margin_right = 456.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PainterButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
material = SubResource( 10 )
margin_right = 128.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 2 )
script = ExtResource( 14 )

[node name="PilotButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
material = SubResource( 12 )
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
script = ExtResource( 15 )

[node name="WitchButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
material = SubResource( 14 )
margin_top = 264.0
margin_right = 128.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
script = ExtResource( 16 )

[node name="BackButton" type="TextureButton" parent="CenterContainer/HBoxContainer/VBoxContainer2"]
material = SubResource( 16 )
margin_top = 396.0
margin_right = 128.0
margin_bottom = 524.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
script = ExtResource( 17 )

[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/TutorialButton" to="CenterContainer/HBoxContainer/VBoxContainer/TutorialButton" method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/ArchaeologistButton" to="CenterContainer/HBoxContainer/VBoxContainer/ArchaeologistButton" method="_on_ArchaeologistButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/DudeButton" to="CenterContainer/HBoxContainer/VBoxContainer/DudeButton" method="_on_DudeButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer/MusicianButton" to="CenterContainer/HBoxContainer/VBoxContainer/MusicianButton" method="_on_MusicianButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/PainterButton" to="CenterContainer/HBoxContainer/VBoxContainer2/PainterButton" method="_on_PainterButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/PilotButton" to="CenterContainer/HBoxContainer/VBoxContainer2/PilotButton" method="_on_PilotButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/WitchButton" to="CenterContainer/HBoxContainer/VBoxContainer2/WitchButton" method="_on_WitchButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/VBoxContainer2/BackButton" to="CenterContainer/HBoxContainer/VBoxContainer2/BackButton" method="_on_BackButton_pressed"]
